# autotriggers

./: CMakeLists.txt  READAME  README.md  addruledialog.cpp  addruledialog.h  autotriggers_gui  mainwindow.cpp  mainwindow.h  triggermodel.cpp  triggermodel.h  usbmonitor.cpp  usbmonitor.h
autotriggers_CLI/: autotriggers  autotriggers.cpp
